animations fixed, name-spacing is the next goal

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -35,7 +35,6 @@ main {
     color: white;
     margin: 0 auto;
     border: 3px solid #39FF14;
-    // width: 85%;
     max-width: 1300px;
     button#play {
       width: 20%;
@@ -64,7 +63,7 @@ main {
       position: relative;
       margin: 0 auto;
       overflow: hidden;
-      padding: 18px;
+      padding: 20px;
       h2, h3 {
         font-size: 30px;
         margin: 10px 0 20px;
